# HotDogsRu_Maven

./: .gitignore  check_keras.py  check_onnx.py  convert.py  convert_keras.py  convert_tf1.py  convert_to_onnx.py  main.py  pom.xml  pyproject.toml  test_keras.py
python-educating/: Fin.ipynb  README.md  SERVER_SETUP.md  convert_keras2onnx.py  convert_to_onnx.py  requirements.txt  train.py  train_corrected.ipynb  train_fixed.py  train_notebook.ipynb  train_server.sh
python_app/: README.md
python_app/app/: main.py
python_app/app/model/: classes.txt  inference.py
python_app/app/static/css/: style.css
python_app/app/static/js/: app.js
python_app/app/templates/: index.html  result.html
src/main/java/com/example/hotdogsru_maven/: ModelTest.java
src/main/java/com/example/hotdogsru_maven/Controllers/: GeneralController.java
src/main/java/com/example/hotdogsru_maven/Service/: NeiroModel.java
src/main/resources/: application.properties
src/main/resources/model/: best_model.onnx
