[project]
name = "hotdogsru-maven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.124.4",
	"ipykernel",
	"jinja2>=3.1.6",
	"keras2onnx>=1.7.0",
	"matplotlib",
	"numpy>=2.3.4",
	"onnxmltools",
	"onnxruntime>=1.23.2",
	"onnxruntime-tools>=1.7.0",
	"pillow>=12.0.0",
	"python-multipart>=0.0.21",
	"tensorflow",
	"tf2onnx>=1.8.4",
	"uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
